# heir_comparisons

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bzlmod  go.mod  requirements.txt
bazel/: import_llvm.bzl
bazel/openfhe/: cereal.BUILD  openfhe.BUILD  rapidjson.BUILD
mlp/: BUILD  convert_to_mlir.py  mlp.py  mlp_model.pth  mnist_mlp_heir_test.py  mnist_mlp_model.pth  train.py
mlp/data/: BUILD
mlp/heir/openfhe/: BUILD  interpreter_bindings.cpp  interpreter_shim.cpp  interpreter_shim.h  mlp_heir_test.py
